test/libsolidity/syntaxTests/storageLayoutSpecifier/boolean.sol
contract C layout at true {}
// ----
// TypeError 6396: (21-25): The base slot of the storage layout must evaluate to a rational number.
